# pxlwolf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PixelWolf.sln  PixelWolf.vcxproj  PixelWolf.vcxproj.filters  README.md  build_linux.sh  cmake_update.sh  pxlwolf.code-workspace  setup_vcpkg.txt
Lua/: CMakeLists.txt
Lua/lua-5.4.0/: CMakeLists.txt  README.md
assets/config/: pxlwolf.ini  pxlwolf.toml
assets/data/: .keepme
assets/fonts/: Font_Origin.md  Font_Origin.txt
assets/levels/: level.ldtk  level1.map  level1.mtl  levels.ldtk  pxlwolf.ldtk
assets/levels/levels/: 0001-Level2.ldtkl
assets/levels/pxlwolf/: 0000-Level1.ldtkl  0001-Level2.ldtkl  0002-Level3.ldtkl  0003-Level4.ldtkl  0004-Level5.ldtkl  0005-Level6.ldtkl  0006-Level7.ldtkl
assets/scripts/: init.bas  init.lua
assets/sprites/: guard.toml  orc.toml
code/: CMakeLists.txt  main.cpp
code/blueprints/: player.toml
code/components/: TagComponent.hpp  components.hpp
code/include/: Application.hpp  Camera.hpp  Entity.hpp  Game.h  Game.hpp  IRenderer.hpp  ImageAtlas.hpp  Level.hpp  Logic.hpp  Map.hpp  MathLib.hpp  Mechanics.hpp  Pixelator.hpp  RayCaster.h  RayCaster.hpp  SDLDeleter.hpp  SDLRenderer.h  SDLRenderer.hpp  WallTypes.hpp  collision.hpp  color.hpp  components.hpp  dbg.hpp  dbg_console.hpp  defs.hpp  draw.hpp  game_engine.hpp  geometry.hpp  lua_main.hpp  map.hpp  olcPGEX_RayCastWorld.h  physfs.hpp  pixel_render.hpp  raycaster_engine.hpp  sdl2.hpp  sprites.hpp  system.hpp  utils.hpp
code/include/3rd/: my_basic.h
code/include/nasl/: nasl_color.h  nasl_draw.h  nasl_geometry.h  nasl_graphics.h
code/main/: Application.cpp  Application.hpp  Camera.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  ImageAtlas.cpp  Level.cpp  Level.hpp  Map.cpp  Map.hpp  Pixelator.cpp  Pixelator.hpp  RayCaster.cpp  RayCaster.hpp  permadi.cpp  permadi.hpp  pixelator_old.cpp  types.cpp  types.hpp
code/src/: Application.cpp  Camera.cpp  Entity.cpp  Game.cpp  ImageAtlas.cpp  Level.cpp  Logic.cpp  Map.cpp  Mechanics.cpp  Pixelator.cpp  RayCaster.cpp  SDLRenderer.cpp  buffer.cpp  collision.cpp  color.cpp  components.cpp  dbg_console.cpp  draw.cpp  game_engine.cpp  geometry.cpp  main.cpp  map.cpp  physfs.cpp  pixel_render.cpp  raycaster_engine.cpp  sprites.cpp  system.cpp  systems.cpp  utils.cpp
code/src/3rd/: my_basic.c
code/src/nasl/: nasl_buffer.cpp  nasl_draw.cpp  nasl_graphics.cpp  nasl_graphics_script.cpp  nasl_image.cpp  nasl_script.cpp  nasl_sprite.cpp  nasl_sprite_script.cpp
code/utility/: ALDeleter.hpp  ImageAtlas.cpp  ImageAtlas.hpp  Map.cpp  Map.hpp  RectAnimation.cpp  RectAnimation.hpp  SDLDeleter.hpp  SpriteSheetLoader.cpp  SpriteSheetLoader.hpp  Timer.cpp  Timer.hpp  dbg_console.cpp  dbg_console.hpp  packer.hpp  unpacker.hpp
hunter/: .gitignore
log/: .keepme
logs/: pxllog.txt
nasl/: CMakeLists.txt
nasl/include/: nasl_buffer.h  nasl_color.h  nasl_dbg.h  nasl_defs.h  nasl_graphics.h  nasl_image.h  nasl_script.h  nasl_sprite.h
nasl/src/: nasl_buffer.c  nasl_buffer_script.c  nasl_color.c  nasl_color_script.c  nasl_draw.c  nasl_draw_script.c  nasl_geometry.c  nasl_graphics.c  nasl_image_script.c  nasl_sprite.c
physfs/: CMakeLists.txt
src/: CMakeLists.txt
src/src/: main.cpp  nasl_geometry.cpp  utils.cpp
